--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,67 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+html{
+  font-size: 20px;
+}
+
+h1, h2 {
+  font-family: Baskerville, "Times New Roman", serif;
+}
+
+header{
+  border-bottom: 1px solid black;
+  border-width: 10px;
+  border-bottom-style: dashed;
+  border-bottom-color: magenta;
+}
+
+.class-list{
+  list-style-type: square;
+}
+
+.item{
+  border: 11px solid black;
+
+}
+
+.even{
+  background-color: grey;
+}
+
+.odd{
+  background-color: black;
+  color: white;
+}
+
+#item1{
+  font-size: 30px;
+
+}
+
+#item2{
+  text-align: right;
+}
+
+#advanced-selectors li>p{
+  padding: 5px;
+  background-color: grey;
+}
+
+#advanced-selectors li:nth-child(odd)>p{
+  background-color: green;
+}
+
+a[title]:hover{
+  text-decoration: none;
+
+}
+
+#advanced-selectors ul>li>a:hover{
+  background-color: yellow;
+} 
+
+
+#advanced-selectors ul>li>a:active{
+  background-color: red;
+  color: white;
+}
